--- a/lesson-8/tablecss.css
+++ b/lesson-8/tablecss.css
@@ -7,8 +7,14 @@
 body {
     display: grid;
     font-family: "Roboto Mono", "sans";
+    justify-content: center;
+    align-self: center;
 }
-
+header {
+    background-color: rgb(83, 160, 93);
+    text-align: center;
+    color: white;
+}
 
 
 table {
@@ -46,4 +52,17 @@ td:hover {
     color: white;
     background-color: var(--backrg);
 
+}
+
+
+h2 {
+    text-align: center;
+    font-size: 15px;
+    margin-top: 0;
+}
+footer {
+    background-color: rgb(83, 160, 93);
+    text-align: center;
+    color: white;
+    padding: .7em;
 }
