--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -534,35 +534,38 @@ label.top {
 	padding: 0.5rem;
 	max-width: 700px;
 	background-color: #eee;
-	font-family: "Caveat", cursive;
     position: relative;
 
 }
 .menu {
-	margin: 1rem auto;
-	border: 1px solid rgba(0, 0, 0, 0.1);
-	padding: 0.5rem;
-
-	text-align: center;
+    margin: 1rem auto;
+    border: 1px solid var(--constrast-backgr-main);
+    border-radius: .5rem;
+    padding: 0.5rem;
+    text-align: center;
+    color: var(--backgr-main);
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    max-width: 1000px;
 }
 
-
 .menu img {
+    
+    width: 27%;
 	padding: .5rem;
     border: solid 2px var(--backgr-main);
     border-radius: .5rem;
 }
 
-article,
 #main-directory .discovery-section {
 	margin: 0.75rem;
 }
 .company {
     margin: 1rem;
     padding: 0.35rem;
-    color: white;
-    background-color: var(--backgr-main);
-    display: flex;
+    color: var(--backgr-main);
+   
     flex-direction: column;
     align-items: center;
     font-size: 1rem;
@@ -570,6 +573,12 @@ article,
     min-width: 225px;
     max-width: 250px;
     max-height: 350px;
+}
+.company:nth-child(odd) {
+    box-shadow: 4px 7px 8px 3px var(--backgr-subheadings);
+}
+.company:nth-child(even) {
+    box-shadow: 4px 7px 8px 3px  var(--constrast-backgr-main);
 }
 
 
