--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -218,10 +218,14 @@
     max-width: 100%;
     align-items: center;
     width: -webkit-fill-available;
+
 }
 .list .company img {
     width: 50px;
     height: 50px;
+}
+.company p:nth-child(3){
+    display: none;
 }
 .list {
     align-items: flex-start;
@@ -235,6 +239,9 @@
     width: 235px;
     max-height: 350px;
     margin: 1rem;
+    display: grid;
+    justify-items: center;
+
 
 }
 
