--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -54,6 +54,7 @@
     section:nth-child(1) {
         grid-column: 2/4;
         grid-row: 1/3;
+        height: 795px;
     }
 
     section:nth-child(2) {
@@ -96,7 +97,7 @@
         width: 85%;
         margin: 0.5em auto;
         align-self: center;
-        padding: 2em 0.5em;
+        padding: 1em 0.5em;
 
     }
 
