--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -56,6 +56,7 @@
         grid-column: 2/4;
         grid-row: 1/3;
         height: 795px;
+        overflow: hidden;
     }
 
     section:nth-child(2) {
