--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -729,3 +729,14 @@ label.top {
     width: 100%;
     border-radius: .3rem;
 }
+
+.map {
+    max-width: 800px;
+    border: solid 3px var(--backgr-subheadings);
+    border-radius: 1rem;
+}
+
+iframe {
+    max-width: 250px;
+    border-radius: .3rem;
+}
