--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -181,6 +181,17 @@
 }
 
 
+/* ===================== CONTACT PAGE ====================== */
+.map {
+    grid-column: 1/3;
+
+}
+iframe {
+    max-width: none;
+    margin: 0 auto;
+
+}
+
 
 
 }
