--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -90,10 +90,9 @@ button {
 }
 
 .icons img {
-    width: 75%;
     padding: .3em;
-    max-width: 32px;
-    max-height: 32px;
+    height: 25px;
+    width: 25px;
 }
 
 .current-date {
@@ -360,9 +359,8 @@ footer {
 
 
 footer img {
-    width: 35%;
-    max-width: 95px;
-    max-height: 95px;
+    width: 95px;
+    height: 95px;
     margin-top: 1em
 }
 
@@ -618,7 +616,8 @@ label.top {
 }
 
 .menu img {
-    width: 55%;
+    width: 35px;
+    height: 40px;
     padding: .5rem;
     border: solid 2px var(--backgr-main);
     border-radius: .5rem;
