--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -187,6 +187,10 @@
 
     }
 
+    .membership-div img {
+        width: 100%;
+        height: auto;
+    }
     form input {
         width: 90%;
     }
